# xx

./: .example.env  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: InitialProposal.md  Requirements.md
src/xx/: __init__.py
src/xx/cli/: main.py
src/xx/core/: config.py  context.py
tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_context.py
