[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xx-cli"
version = "0.1.0"
description = "An intelligent command-line assistant that helps users execute complex commands"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ["cli", "assistant", "llm", "command-line"]
authors = [
    { name = "Lyuboslav Petrov", email = "petrov.lyuboslav@gmail.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "openai==1.59.4",
    "anthropic==0.42.0",
    "ollama==0.4.5",
    "python-dotenv==1.0.1",
    "typer==0.15.1",
    "rich==13.9.4",
    "pydantic==2.10.4",
    "pydantic-settings==2.2.1"
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "black==24.10.0",
    "isort==5.13.2",
    "mypy==1.14.1",
    "pre-commit==4.0.1",
    "flake8==7.1.1",
    "flake8-bugbear==24.12.12",
    "flake8-comprehensions==3.16.0",
    "flake8-docstrings==1.7.0",
    "flake8-simplify==0.21.0",
    "pyupgrade==3.19.1",
    "commitizen==4.1.0"
]
build = [
    "build==1.2.2.post1",
    "twine==5.0.0"
]

[project.urls]
Homepage = "https://github.com/nirabo/xx"
Repository = "https://github.com/nirabo/xx.git"
Documentation = "https://github.com/nirabo/xx/docs"
"Bug Tracker" = "https://github.com/nirabo/xx/issues"

[project.scripts]
xx = "xx.cli.main:app"

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.hatch.build.targets.wheel]
packages = ["src/xx"]

[tool.hatch.build.targets.sdist]
packages = ["src/xx"]

[tool.hatch.metadata]
allow-direct-references = true
